Fix facet content alignment

--- a/src/components/Facets/Facets.scss
+++ b/src/components/Facets/Facets.scss
@@ -55,7 +55,7 @@
             width: 100%;
             .total {
                 position: relative;
-                top: -5px;
+                top: 8px;
                 height: 9px;
                 width: 100%;
                 background-color: transparent;
@@ -71,7 +71,7 @@
         }
         td.count {
             position: relative;
-            top: -5px;
+            top: 3px;
             font-size: 13px;
             text-align: right;
         }
